--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "cbac187d-c590-404f-b451-8f4ec2292278",
    "metadata": {},
    "source": [
     "# Get backend information with Qiskit\n",
@@ -20,6 +21,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b47b9112-316b-46fd-9b23-e3a8245428fb",
    "metadata": {
     "tags": [
      "version-info"
@@ -40,6 +42,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c05364ae-48e2-439e-8074-3a053731c744",
    "metadata": {},
    "source": [
     "This page explains how to use Qiskit to find information about your available backends."
@@ -47,6 +50,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c9aec913-438d-4849-9ee1-ca531264b50e",
    "metadata": {},
    "source": [
     "## List backends\n",
@@ -60,6 +64,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "61cf3942-2070-4917-90ab-44afdcbde92f",
    "metadata": {},
    "source": [
     "<LegacyContent>\n",
@@ -73,6 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "b169fd5c-5132-47ed-9baf-eecd37f8f668",
    "metadata": {},
    "outputs": [
     {
@@ -101,6 +107,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "546f7270-66b9-43eb-a445-731ffa06a33f",
    "metadata": {},
    "source": [
     "The [`QiskitRuntimeService.backend()`](../api/qiskit-ibm-runtime/qiskit-runtime-service#backend) method (note that this is singular: *backend*) takes the name of the backend as the input parameter and returns an [`IBMBackend`](../api/qiskit-ibm-runtime/ibm-backend) instance representing that particular backend:"
@@ -109,6 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "424a7f11-6fd1-4599-a6e7-6fa722234b9a",
    "metadata": {},
    "outputs": [
     {
@@ -128,6 +136,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2a9fa4a7-4f2a-47ef-be70-b1e100b20d2a",
    "metadata": {},
    "source": [
     "## Filter backends\n",
@@ -144,6 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "cc7b0879-feaa-42da-955a-775b456198a1",
    "metadata": {},
    "outputs": [
     {
@@ -164,6 +174,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "37fbdbc1-9f24-491b-8352-e56d767a5acd",
    "metadata": {},
    "source": [
     "Use these keyword arguments to filter by any attribute in backend configuration ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_configuration_schema.json)) or status ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_status_schema.json)). A similar method is [`QiskitRuntimeService.least_busy()`](../api/qiskit-ibm-runtime/qiskit-runtime-service#least_busy), which takes the same filters as `backends()` but returns the backend that matches the filters and has the least number of jobs pending in the queue:"
@@ -172,6 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "846dfe4b-def3-49c1-9d2a-906fd2dc55de",
    "metadata": {},
    "outputs": [
     {
@@ -191,6 +203,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3b34bb71-b8cf-415f-9901-a5970997ee15",
    "metadata": {},
    "source": [
     "## Static backend information\n",
@@ -203,6 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "8d070b69-1b6d-4faa-9a4a-d12aba47d0b7",
    "metadata": {},
    "outputs": [
     {
@@ -228,6 +242,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1fc62b0b-1975-4bdc-a968-fa5bff92a893",
    "metadata": {},
    "source": [
     "For a full list of attributes, see the [`IBMBackend` API documentation](/docs/api/qiskit-ibm-runtime/ibm-backend)."
@@ -235,6 +250,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "48cf020c-24eb-49dd-a417-7196d036b0e8",
    "metadata": {},
    "source": [
     "## Dynamic backend information\n",
@@ -267,6 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "74b54d1b-7db8-4879-b51f-d307f023c535",
    "metadata": {},
    "outputs": [
     {
@@ -288,6 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "cdca7a53-9101-48f1-bddc-48c393b56b85",
    "metadata": {},
    "outputs": [
     {
@@ -324,6 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "1379efb5-359a-4246-9603-fa5d007f9f8a",
    "metadata": {},
    "outputs": [
     {
@@ -370,6 +389,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "67525443-070e-4798-99b3-72a599bf96c8",
    "metadata": {},
    "source": [
     "### Instruction properties\n",
@@ -380,6 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "64fc70f8-d848-45f2-aa25-9af10c315e1b",
    "metadata": {},
    "outputs": [
     {
@@ -399,6 +420,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f89c0fb8-7fe0-46fc-8f8b-fed5b4aba8b7",
    "metadata": {},
    "source": [
     "The following cell shows the properties for a measurement operation (including the readout error) on qubit 0."
@@ -407,6 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "412fec92-7a4b-41ff-b278-48e1bbcdaf3f",
    "metadata": {},
    "outputs": [
     {
@@ -426,6 +449,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "89918e29-ee80-4c5e-9d25-c9331fa2f27e",
    "metadata": {},
    "source": [
     "## Next steps\n",
@@ -440,7 +464,7 @@
  "metadata": {
   "description": "Find and filter available backends, get configuration and calibration data programmatically.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -454,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3"
   },
   "title": "Get backend information with Qiskit"
  },
