--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7644e8cd-faf5-4384-87e0-86ce1a4f9a37",
+   "id": "cbac187d-c590-404f-b451-8f4ec2292278",
    "metadata": {},
    "source": [
     "# Get backend information with Qiskit\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76d54c88-3ff2-4836-b1fd-a266fa461130",
+   "id": "b47b9112-316b-46fd-9b23-e3a8245428fb",
    "metadata": {
     "tags": [
      "version-info"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "039bc58f-530a-4c0b-90ee-c8bb126b34d0",
+   "id": "c05364ae-48e2-439e-8074-3a053731c744",
    "metadata": {},
    "source": [
     "This page explains how to use Qiskit to find information about your available backends."
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e292f84-986b-4c94-a8c7-d1ede56d0d08",
+   "id": "c9aec913-438d-4849-9ee1-ca531264b50e",
    "metadata": {},
    "source": [
     "## List backends\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbd100df-d4df-4f3b-9c1d-50c3f19bf2f9",
+   "id": "61cf3942-2070-4917-90ab-44afdcbde92f",
    "metadata": {},
    "source": [
     "<LegacyContent>\n",
@@ -77,18 +77,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "9af5a961-cdfd-49d1-a198-988b2cc231ff",
+   "execution_count": 1,
+   "id": "b169fd5c-5132-47ed-9baf-eecd37f8f668",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[<IBMBackend('ibm_brisbane')>,\n",
-       " <IBMBackend('ibm_torino')>]"
+       " <IBMBackend('ibm_fez')>,\n",
+       " <IBMBackend('ibm_torino')>,\n",
+       " <IBMBackend('ibm_marrakesh')>,\n",
+       " <IBMBackend('ibm_kingston')>]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,14 +100,14 @@
     "# Initialize your account\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
+    "service = QiskitRuntimeService()\n",
     "\n",
     "service.backends()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6ae15e28-2542-4029-b2c6-f991d47d34bf",
+   "id": "546f7270-66b9-43eb-a445-731ffa06a33f",
    "metadata": {},
    "source": [
     "The [`QiskitRuntimeService.backend()`](../api/qiskit-ibm-runtime/qiskit-runtime-service#backend) method (note that this is singular: *backend*) takes the name of the backend as the input parameter and returns an [`IBMBackend`](../api/qiskit-ibm-runtime/ibm-backend) instance representing that particular backend:"
@@ -113,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a7a460ca-1d01-4942-b76c-d79e6581d194",
+   "id": "424a7f11-6fd1-4599-a6e7-6fa722234b9a",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87ea5116-6303-43e0-979d-f899bf7d4863",
+   "id": "2a9fa4a7-4f2a-47ef-be70-b1e100b20d2a",
    "metadata": {},
    "source": [
     "## Filter backends\n",
@@ -150,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ab782327-38fa-4882-86bf-5ac203638ae9",
+   "id": "cc7b0879-feaa-42da-955a-775b456198a1",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f506e701-5284-48f9-bf94-fc92ff2970e7",
+   "id": "37fbdbc1-9f24-491b-8352-e56d767a5acd",
    "metadata": {},
    "source": [
     "Use these keyword arguments to filter by any attribute in backend configuration ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_configuration_schema.json)) or status ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_status_schema.json)). A similar method is [`QiskitRuntimeService.least_busy()`](../api/qiskit-ibm-runtime/qiskit-runtime-service#least_busy), which takes the same filters as `backends()` but returns the backend that matches the filters and has the least number of jobs pending in the queue:"
@@ -180,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e29239cd-6ad3-49dd-bf9b-7f4265697389",
+   "id": "846dfe4b-def3-49c1-9d2a-906fd2dc55de",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c21c364-74d0-43ef-a20f-086fa461429d",
+   "id": "3b34bb71-b8cf-415f-9901-a5970997ee15",
    "metadata": {},
    "source": [
     "## Static backend information\n",
@@ -213,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "352258ac-3c37-42cf-bde9-f1c6891a869b",
+   "id": "8d070b69-1b6d-4faa-9a4a-d12aba47d0b7",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e721856-84c0-4378-9929-4e9916e479bc",
+   "id": "1fc62b0b-1975-4bdc-a968-fa5bff92a893",
    "metadata": {},
    "source": [
     "For a full list of attributes, see the [`IBMBackend` API documentation](/docs/api/qiskit-ibm-runtime/ibm-backend)."
@@ -247,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e77a73d6-8022-4aed-82e9-0c19f6700391",
+   "id": "48cf020c-24eb-49dd-a417-7196d036b0e8",
    "metadata": {},
    "source": [
     "## Dynamic backend information\n",
@@ -280,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2287792c-3e80-4291-abe6-130ace6bf45d",
+   "id": "74b54d1b-7db8-4879-b51f-d307f023c535",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "66d67ea5-5f50-4eea-a9b7-1ddc6293e844",
+   "id": "cdca7a53-9101-48f1-bddc-48c393b56b85",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c112bba3-719a-443c-9e79-ccb955229055",
+   "id": "1379efb5-359a-4246-9603-fa5d007f9f8a",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebf77e68-6baf-46bd-982a-a10d4f8b6869",
+   "id": "67525443-070e-4798-99b3-72a599bf96c8",
    "metadata": {},
    "source": [
     "### Instruction properties\n",
@@ -397,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "093c8544-d9c1-4cf1-a643-df2d14942795",
+   "id": "64fc70f8-d848-45f2-aa25-9af10c315e1b",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fc6cb8a-28e1-4add-af5e-c0f046f63be1",
+   "id": "f89c0fb8-7fe0-46fc-8f8b-fed5b4aba8b7",
    "metadata": {},
    "source": [
     "The following cell shows the properties for a measurement operation (including the readout error) on qubit 0."
@@ -426,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "daf7753b-9b77-451e-80a6-ea9212be77f6",
+   "id": "412fec92-7a4b-41ff-b278-48e1bbcdaf3f",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db2e6ddb-2636-469a-b0b5-eae864857a1a",
+   "id": "89918e29-ee80-4c5e-9d25-c9331fa2f27e",
    "metadata": {},
    "source": [
     "## Next steps\n",
