--- a/docs/guides/DAG-representation.ipynb
+++ b/docs/guides/DAG-representation.ipynb
@@ -5,7 +5,7 @@
    "id": "4cb32582",
    "metadata": {},
    "source": [
-    "<!--{/* cspell:ignore subdag DAGOpNode qargs cargs dag_drawer */}\n",
+    "{/* cspell:ignore subdag DAGOpNode qargs cargs dag_drawer */}\n",
     "# Work with DAGs in transpiler passes\n",
     "\n",
     "In Qiskit, within the transpilation stages, circuits are represented using a DAG. In general, a DAG is composed of vertices (also known as \"nodes\") and directed edges that connect pairs of vertices in a particular orientation. This representation is stored using `qiskit.dagcircuit.DAGCircuit` objects that are composed of individual `DagNode` objects. The advantage of this representation over a pure list of gates (that is, a netlist) is that the flow of information between operations is explicit, making it easier to make transformation decisions.\n",
