chore: implement suggestions

--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -154,9 +154,9 @@
     "tem_function_name = \"algorithmiq/tem\"\n",
     "\n",
     "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_cloud\",\n",
-    "    instance=\"USER_CRN\",\n",
-    "    token=\"USER_API_KEY\"\n",
+    "    channel=\"ibm_cloud / ibm_quantum / ibm_quantum_platform\",\n",
+    "    instance=\"USER_CRN / HGP\",\n",
+    "    token=\"USER_API_KEY / IQP_API_TOKEN\",\n",
     ")\n",
     "\n",
     "# Load your function\n",
@@ -289,9 +289,8 @@
     "<CloudContent>\n",
     "Name | Type | Description | Required | Default | Example\n",
     "-- | -- | -- | -- | -- | --\n",
-    "`pubs` | Iterable[EstimatorPubLike] | An iterable of PUB-like (primitive unified bloc) objects, such as tuples `(circuit, observables)` or `(circuit, observables, parameters, precision)`. See [Overview of PUBs](/docs/guides/primitive-input-output#overview-of-pubs) for more information. The circuits don't need to be ISA circuits. | Yes | N/A | (circuit, observables)\n",
+    "`pubs` | Iterable[EstimatorPubLike] | An iterable of PUB-like (primitive unified bloc) objects, such as tuples `(circuit, observables)` or `(circuit, observables, parameters, precision)`. See [Overview of PUBs](/docs/guides/primitive-input-output#overview-of-pubs) for more information. If a non-ISA circuit is passed, it will be transpiled with optimal settings. If an ISA circuit is passed, it will not be transpiled, in this case the observable must be defined on the whole QPU. | Yes | N/A | (circuit, observables)\n",
     "`backend_name` | str | Name of the backend to make the query.| No | If not provided, the least busy backend will be used. | \"ibm_fez\"\n",
-    "`instance` | str | The cloud resource name ov the instance to use in that format. | Yes | N/A |\"CRN\"\n",
     "`options` | dict | Input options. See `Options` section for more details. | No | See `Options` section for more details.| \\{\"max_bond_dimension\": 100\\}\n",
     "</CloudContent>\n",
     "\n",
