--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -208,11 +208,7 @@
     "# Define backend to use. TEM will choose the least-busy device reported by IBM if not specified\n",
     "backend_name = \"ibm_torino\"\n",
     "\n",
-    "job = tem.run(\n",
-    "    pubs=[pub],\n",
-    "    backend_name=backend_name,\n",
-    "    options=options\n",
-    ")"
+    "job = tem.run(pubs=[pub], backend_name=backend_name, options=options)"
    ]
   },
   {
