--- a/learning/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit.ipynb
+++ b/learning/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit.ipynb
@@ -733,7 +733,7 @@
     "qcoin_phase = QuantumCircuit(1)\n",
     "qcoin_phase.h(0)\n",
     "# replace \"x\" below with a phase from 0 to 2*np.pi (this cell won't run if you leave x)\n",
-    "#qcoin_phase.rz(x, 0)  \n",
+    "# qcoin_phase.rz(x, 0)\n",
     "qcoin_phase.h(0)\n",
     "qcoin_phase.measure_all()\n",
     "\n",
@@ -1120,7 +1120,6 @@
   }
  ],
  "metadata": {
-  "title": "Superposition with Qiskit",
   "description": "Learn about superposition and what it means for measurements on quantum computers.",
   "kernelspec": {
    "display_name": "Python 3",
@@ -1138,7 +1137,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3"
-  }
+  },
+  "title": "Superposition with Qiskit"
  },
  "nbformat": 4,
  "nbformat_minor": 5
