Add thumbnails for BOQI

--- a/learning/courses/basics-of-quantum-information/single-systems/introduction.ipynb
+++ b/learning/courses/basics-of-quantum-information/single-systems/introduction.ipynb
@@ -7,6 +7,15 @@
    "source": [
     "# Introduction\n",
     "\n",
+    "\n",
+    "<ImageLink\n",
+    "  title=\"Single Systems | Understanding Quantum Information & Computation | Lesson 01\"\n",
+    "  alt=\"Video thumbnail\"\n",
+    "  href=\"https://youtu.be/3-c4xJa7Flk\"\n",
+    "  src=\"/learning/images/courses/basics-of-quantum-information/single-systems/introduction/youtube-thumbnail.avif\"\n",
+    "/>\n",
+    "\n",
+    "\n",
     "This lesson introduces the basic framework of <DefinitionTooltip definition=\"Quantum information is both a concept and a framework for modeling and describing information in quantum systems. While it is based on and motivated by quantum physics, the physical details can largely be abstracted away, leaving a mathematical framework that is applicable to a variety of specific physical systems.\">quantum information</DefinitionTooltip>, including the description of quantum states as vectors with complex number entries, measurements that allow classical information to be extracted from quantum states, and operations on quantum states that are described by unitary matrices.\n",
     "\n",
     "We will restrict our attention in this lesson to the comparatively simple setting in which a *single system* is considered in isolation.\n",
