--- a/learning/courses/basics-of-quantum-information/entanglement-in-action/introduction.ipynb
+++ b/learning/courses/basics-of-quantum-information/entanglement-in-action/introduction.ipynb
@@ -7,6 +7,15 @@
    "source": [
     "# Introduction\n",
     "\n",
+    "\n",
+    "<ImageLink\n",
+    "  title=\"Entanglement in Action |Understanding Quantum Information & Computation | Lesson 04\"\n",
+    "  alt=\"Video thumbnail\"\n",
+    "  href=\"https://youtu.be/GSsElSQgMbU\"\n",
+    "  src=\"/learning/images/courses/basics-of-quantum-information/entanglement-in-action/introduction/youtube-thumbnail.avif\"\n",
+    "/>\n",
+    "\n",
+    "\n",
     "In this lesson we'll take a look at three fundamentally important examples.\n",
     "The first two are the *quantum teleportation* and *superdense coding* protocols, which are principally concerned with the transmission of information from a sender to a receiver.\n",
     "The third example is an abstract game, called the *CHSH game*, which illustrates a phenomenon in quantum information that is sometimes referred to as *nonlocality*.\n",
