--- a/learning/courses/qiskit-in-classrooms-quantum-mechanics/bells-inequality-with-qiskit.ipynb
+++ b/learning/courses/qiskit-in-classrooms-quantum-mechanics/bells-inequality-with-qiskit.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "{/* cspell:ignore Gott würfelt nicht outcoming Rihanna Rihanna's Marshman */}\n",
+    "\n",
+    "# The Nature of Quantum States: Hidden Variables vs Bell's Inequality"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2f32da4b-8765-40b7-9df3-3c00c410e607",
    "metadata": {},
    "source": [
@@ -20,8 +29,6 @@
    "id": "b6c9ec60-3541-4caf-bd6c-c8ae4072322e",
    "metadata": {},
    "source": [
-    "# The Nature of Quantum States: Hidden Variables vs Bell's Inequality\n",
-    "\n",
     "## The Problem\n",
     "\n",
     "In many calculations throughout quantum mechanics, you start with a known state of a system, and that state is typically known through a measurement. Today we want to answer the question, “What can you say about a particle's state prior to any measurement?” An obvious corollary is, “How can we know, if we're not allowed to measure?”\n",
@@ -1134,7 +1141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.11.12"
   },
   "title": "Bell's inequality with Qiskit"
  },
