--- a/learning/courses/qiskit-in-classrooms-quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
+++ b/learning/courses/qiskit-in-classrooms-quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "{/* cspell:ignore prodxz delx delz dely prodxy uparrow downarrow */}\n",
+    "\n",
+    "# Exploring uncertainty"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "39679663-00f6-48d4-acaf-d380b464b3fc",
    "metadata": {},
    "source": [
@@ -20,8 +29,6 @@
    "id": "887242b5-b3c0-4ccc-bbc8-23477a4be991",
    "metadata": {},
    "source": [
-    "# Uncertainty\n",
-    "\n",
     "## Introduction\n",
     "\n",
     "You have probably heard of the uncertainty principle, even outside of your physics courses. A common colloquial restatement of uncertainty is \"By looking at something, you influence it.\" That is certainly true. But a more physical way of describing uncertainty is that there are certain physical observables that have an incompatibility that prevents them both from being simultaneously known to arbitrary accuracy. Many students first encounter the pair of incompatible variables $x$ and $p_x$, meaning the position along one axis called the $x$-axis, and the linear momentum along that direction, respectively. For those variables the constraint on uncertainty is written\n",
