--- a/learning/courses/qiskit-in-classrooms-quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
+++ b/learning/courses/qiskit-in-classrooms-quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "{/* cspell:ignore nabla uparrow downarrow */}\n",
+    "\n",
+    "# The Stern-Gerlach experiment using quantum computers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c62ae6e1-7d47-4437-b350-232635b36b58",
    "metadata": {},
    "source": [
@@ -20,8 +29,6 @@
    "id": "1c12614f-5e0b-4110-acc0-f258ddba353b",
    "metadata": {},
    "source": [
-    "# The Stern-Gerlach experiment using quantum computers\n",
-    "\n",
     "## The experiment\n",
     "In the early 1900's, evidence of quantized behavior on atomic scales was mounting. Many successful interpretations of data like Max Planck's explanation of the ultraviolet catastrophe, and experiments like the one by Otto Stern and Walther Gerlach were critical in convincing the world that a system of quantum mechanics was necessary, and that certain physical phenomena are quantized. In the case of the Stern-Gerlach experiment (conceived by Stern in 1921 and carried out by Stern and Gerlach in 1922), the goal was to check for the quantization of angular momentum in atoms.\n",
     "\n",
