--- a/learning/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit.ipynb
+++ b/learning/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "4046fd82",
+   "metadata": {},
+   "source": [
+    "{/* cspell:ignore nflips fliplist qcoin squareroot qnot qsqrtnot qphase qhadamard */}\n",
+    "\n",
+    "# Quantum Coins — a module on superposition and interference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bc3346f6",
    "metadata": {},
    "source": [
@@ -13,14 +23,6 @@
     "\n",
     "To set up and install the packages above, see the guidance on IBM Quantum's [Documentation page](https://docs.quantum.ibm.com/guides/install-qiskit).\n",
     "In order to run jobs on real quantum computers, students will need to set up an account with IBM Quantum. This can be done by following the steps outlined on [Documentation here](https://docs.quantum.ibm.com/guides/setup-channel)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a0a349a4-41b6-43ed-8af6-5389883b89d7",
-   "metadata": {},
-   "source": [
-    "# Quantum Coins — a module on superposition and interference"
    ]
   },
   {
@@ -50,7 +52,7 @@
     "\n",
     "$ S(coin) =  \\frac{1}{2}|up\\rangle + \\frac{1}{2}|down\\rangle $\n",
     "\n",
-    "Here, the two terms represent the two possible outcomes of the flip, and their coefficients represent the probabilites of each of the outcomes. Note that typically, the \"$|\\rangle$\" (known as a \"ket\") is used to represent a quantum state, but here, we are talking about a *classical* probabilistic state. See [Lesson 1: Single Systems](https://learning.quantum.ibm.com/course/basics-of-quantum-information/single-systems) in the Basics of Quantum Information course to learn more about how we represent classical and quantum information.\n",
+    "Here, the two terms represent the two possible outcomes of the flip, and their coefficients represent the probabilities of each of the outcomes. Note that typically, the \"$|\\rangle$\" (known as a \"ket\") is used to represent a quantum state, but here, we are talking about a *classical* probabilistic state. See [Lesson 1: Single Systems](https://learning.quantum.ibm.com/course/basics-of-quantum-information/single-systems) in the Basics of Quantum Information course to learn more about how we represent classical and quantum information.\n",
     "\n",
     "If we were to flip a coin 1000 times and record the number of heads up and down, we would get something like this:"
    ]
@@ -284,7 +286,7 @@
    "source": [
     "With 1000 samples of the circuit above, we have something that looks basically identical to the classical coin histogram, up to some statistical fluctuation.\n",
     "\n",
-    "In addition to sampling the statistics of the quantum coin, we can also use another Qiskit primitive called `Estimator` to measure the so-called *expectation value* of an *observable* of the state. To illustrate what this expectation value is, let's use the classical coin as an example. Say you're using the coin to gamble: everytime you flip the coin and it lands \"heads up,\" you win one dollar. But everytime it lands \"heads down,\" you lose one dollar. If you want to know how much money you're expected to get each flip (the expectation value of the observable \"money\"), then you would calculate:\n",
+    "In addition to sampling the statistics of the quantum coin, we can also use another Qiskit primitive called `Estimator` to measure the so-called *expectation value* of an *observable* of the state. To illustrate what this expectation value is, let's use the classical coin as an example. Say you're using the coin to gamble: every time you flip the coin and it lands \"heads up,\" you win one dollar. But every time it lands \"heads down,\" you lose one dollar. If you want to know how much money you're expected to get each flip (the expectation value of the observable \"money\"), then you would calculate:\n",
     "\n",
     "$E(money) = \\frac{1}{2} (+ \\$1) +  \\frac{1}{2} (- \\$1) = \\$0 $\n",
     "\n",
@@ -485,7 +487,7 @@
    "id": "37b04a99-0256-41f4-8bf5-362b3508ca34",
    "metadata": {},
    "source": [
-    "What is going on here? It seems like our quantum coin can have random, probabilistic outcomes along one dimension, but perfectly predictible outcomes along another. That would be like flipping a coin and guaranteeing that every time it was caught by sandwiching it between two hands, it would end up with the head facing the right."
+    "What is going on here? It seems like our quantum coin can have random, probabilistic outcomes along one dimension, but perfectly predictable outcomes along another. That would be like flipping a coin and guaranteeing that every time it was caught by sandwiching it between two hands, it would end up with the head facing the right."
    ]
   },
   {
@@ -495,7 +497,7 @@
    "source": [
     "## The quantum phase\n",
     "\n",
-    "The key difference of the quantum coin is that it has another quality that the classical coin does not. Remember that in a classical probabilitistic state,\n",
+    "The key difference of the quantum coin is that it has another quality that the classical coin does not. Remember that in a classical probabilistic state,\n",
     "\n",
     "$ S(coin) =  c_1|up\\rangle + c_2|down\\rangle $\n",
     "\n",
@@ -781,7 +783,7 @@
     "\n",
     "If we perform this \"measurement\" on the coin standing on its edge, then the coin will \"collapse\" to heads up and heads down with equal probability. Much like the coin flip, in principle, the direction that the coin falls can be predicted based on the initial conditions of the coin and how exactly the force of our hand is applied to the coin to \"collapse\" it. But in practice, it should be difficult to predict which side will land up, so it is essentially random.\n",
     "\n",
-    "We can actually measure this coin along three different axes: $x$, $y$, and $z$. We see that the coin's edge is pointing along the $x$ and $z$, so measurement in those directions requires \"collapsing\" the coin - hence, along those axes, there will be random with 50:50 probaility of measuring heads up and down. But along the $y$-axis, it's already flat, with its head facing the -y direction. We can call that \"heads forward.\"\n",
+    "We can actually measure this coin along three different axes: $x$, $y$, and $z$. We see that the coin's edge is pointing along the $x$ and $z$, so measurement in those directions requires \"collapsing\" the coin - hence, along those axes, there will be random with 50:50 probability of measuring heads up and down. But along the $y$-axis, it's already flat, with its head facing the -y direction. We can call that \"heads forward.\"\n",
     "\n",
     "So, while the x and z measurements yielded random results, the y measurement will alway yield the same result! If you recall the \"quantum coin flip\" experiment from the previous section, this is reminiscent to how the quantum coin behaved. It was measured to be 0 or 1  with 50/50 probability in the z-direction, but always $|+\\rangle$ and never $|-\\rangle$ along X.  **This is suggestive that perhaps a coin sitting still, on its edge, is a better way to visualize a superposition state of a qubit than coin wildly flipping through the air.**\n",
     "\n",
@@ -1056,7 +1058,7 @@
     "\n",
     "Whether a quantum state is even in a superposition is really just in the eye of the beholder. As you've likely encountered before, we are free to choose our coordinate system —— $x$, $y$, and $z$ can point along any three orthogonal directions. So, if we have a superposition of 0 and 1 in one coordinate system, we can define a new coordinate system —— or equivalently, a new \"measurement basis\" —— in which the state is pointing purely in the $+z$ direction, and therefore not in a superposition state. So, when we say a qubit is in a superposition, we must also answer the question, \"superposition of *what*?\"\n",
     "\n",
-    "You may leave this module with the impression that we've just removed all the mystery from quantum mechanics. Afterall, one of the supposedly \"weirdest\" aspects, the superposition state of a qubit, is really just as simple as a three-dimensional vector. But keep in mind that the coin is still only an analogy, and even the Bloch vector is only a visualization tool to calculate probabilities of measurement outcomes. We can’t say what a quantum state is *really* doing before it's measured. Because, checking that requires a measurement!\n",
+    "You may leave this module with the impression that we've just removed all the mystery from quantum mechanics. After all, one of the supposedly \"weirdest\" aspects, the superposition state of a qubit, is really just as simple as a three-dimensional vector. But keep in mind that the coin is still only an analogy, and even the Bloch vector is only a visualization tool to calculate probabilities of measurement outcomes. We can’t say what a quantum state is *really* doing before it's measured. Because, checking that requires a measurement!\n",
     "\n",
     "We will discuss this conundrum of what is the “true” nature of a quantum state, how the quantum phenomenon of entanglement can help us elucidate this, in the Bell's Inequality module."
    ]
