--- a/learning/courses/foundations-of-quantum-error-correction/stabilizer-formalism/repetition-code-revisited.ipynb
+++ b/learning/courses/foundations-of-quantum-error-correction/stabilizer-formalism/repetition-code-revisited.ipynb
@@ -150,7 +150,7 @@
     "\n",
     "Both of these properties — that the syndromes partition both the state space in which encodings live and all of the Pauli operations on this space into equal-sized collections — are true in general for stabilizer codes, which we'll define precisely in the next section.\n",
     "\n",
-    "Although it's mainly an aside at this point, it's worth mentioning that Pauli operations that commute with *both* stabilizer generators, or equivalently Pauli operations that result in the syndrome $(+1,+1),$ but are not *themselves* proportional to elements of the stabilizer, turn out to behave just like single-qubit Pauli operations on the encoded qubit (i.e., the *logical* qubit) for this code.\n",
+    "Although it's mainly an aside at this point, it's worth mentioning that Pauli operations that commute with *both* stabilizer generators, or equivalently Pauli operations that result in the syndrome $(+1,+1),$ but are not *themselves* proportional to elements of the stabilizer, turn out to behave just like single-qubit Pauli operations on the encoded qubit (as in, the *logical* qubit) for this code.\n",
     "For example, $X\\otimes X \\otimes X$ commutes with both stabilizer generators, but is itself not proportional to any element in the stabilizer, and indeed the effect of this operation on an encoding is equivalent to an $X$ gate on the logical qubit being encoded.\n",
     "\n",
     "$$\n",
