spell out number

--- a/learning/courses/foundations-of-quantum-error-correction/stabilizer-formalism/stabilizer-codes.ipynb
+++ b/learning/courses/foundations-of-quantum-error-correction/stabilizer-formalism/stabilizer-codes.ipynb
@@ -388,7 +388,7 @@
     "S Z S^{\\dagger} = Z.\n",
     "$$\n",
     "\n",
-    "For CNOT gates, there are 15 non-identity Pauli operations on 2 qubits to check.\n",
+    "For CNOT gates, there are 15 non-identity Pauli operations on two qubits to check.\n",
     "Naturally, they can be checked individually — but the relationships between CNOT gates and $X$ and $Z$ gates listed (in circuit form) in the previous lesson, together with the multiplication rules for Pauli matrices, offer a shortcut to the same conclusion.\n",
     "\n",
     "Once we know this conjugation property is true for Hadamard, $S,$ and CNOT gates, we can immediately conclude that it is true for *circuits* composed of these gates — which is to say, all Clifford operations.\n",
