--- a/learning/courses/foundations-of-quantum-error-correction/quantum-code-constructions/css-codes.ipynb
+++ b/learning/courses/foundations-of-quantum-error-correction/quantum-code-constructions/css-codes.ipynb
@@ -301,7 +301,7 @@
     "\n",
     "Notice that there is a price to be paid though, which is that we can't *encode* as many qubits as we could bits with the two classical codes.\n",
     "This is because the total number of stabilizer generators for the CSS code is the *sum* of the number of parity checks for the two classical linear codes, and each stabilizer generator cuts the dimension of the code space in half.\n",
-    "For example, the $[7,4,3]$-Hamming code allows for the encoding of 4 classical bits, because we have just 3 parity check strings for this code, whereas the 7-qubit Steane code only encodes one qubit, because it has 6 stabilizer generators.\n",
+    "For example, the $[7,4,3]$-Hamming code allows for the encoding of four classical bits, because we have just three parity check strings for this code, whereas the 7-qubit Steane code only encodes one qubit, because it has six stabilizer generators.\n",
     "\n",
     "## Code spaces of CSS codes\n",
     "\n",
@@ -361,7 +361,7 @@
     "= \\frac{1}{\\sqrt{2^t}} \\sum_{v\\in\\mathcal{D}_X} \\vert u \\oplus v\\rangle \\qquad \\text{(for all $u\\in\\mathcal{C}_Z$)}\n",
     "$$\n",
     "\n",
-    "In words, these vectors are uniform superpositions over the strings in the dual code $\\mathcal{D}_X$ of the code corresponding to the $X$ stabilizer generators, shifted by (i.e., bitwise XORed with) strings in the code $\\mathcal{C}_Z$ corresponding to the $Z$ stabilizer generators.\n",
+    "In words, these vectors are uniform superpositions over the strings in the dual code $\\mathcal{D}_X$ of the code corresponding to the $X$ stabilizer generators, shifted by (in other words, bitwise XORed with) strings in the code $\\mathcal{C}_Z$ corresponding to the $Z$ stabilizer generators.\n",
     "To be clear, different choices for the shift — represented by the string $u$ in this expression — can result in the same vector.\n",
     "So, these states aren't all distinct, but collectively they span the entire code space.\n",
     "\n",
@@ -410,7 +410,7 @@
     "$$\n",
     "\n",
     "The dual codes $\\mathcal{D}_X$ and $\\mathcal{D}_Z$ are therefore also the same.\n",
-    "We have 3 generators, so we obtain 8 strings.\n",
+    "We have three generators, so we obtain eight strings.\n",
     "\n",
     "$$\n",
     "\\mathcal{D}_X = \\mathcal{D}_Z =\n",
