--- a/learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/introduction.ipynb
+++ b/learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/introduction.ipynb
@@ -30,9 +30,12 @@
     "\n",
     "## Lesson video\n",
     "\n",
-    "IBM video link: https://video.ibm.com/embed/recorded/134352398?showtitle=false\n",
-    "\n",
-    "Access the [YouTube video](https://youtu.be/aeaqXh2XXMk?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson."
+    "<ImageLink\n",
+    "  title=\"Fault Tolerant Quantum Computation | Understanding Quantum Information & Computation | Lesson 16\"\n",
+    "  alt=\"Video thumbnail\"\n",
+    "  href=\"https://youtu.be/aeaqXh2XXMk?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO\"\n",
+    "  src=\"/learning/images/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/introduction/youtube-thumbnail.avif\"\n",
+    "/>"
    ]
   }
  ],
