--- a/learning/courses/foundations-of-quantum-error-correction/quantum-code-constructions/introduction.ipynb
+++ b/learning/courses/foundations-of-quantum-error-correction/quantum-code-constructions/introduction.ipynb
@@ -24,9 +24,12 @@
     "\n",
     "## Lesson video\n",
     "\n",
-    "IBM video link: https://video.ibm.com/embed/recorded/134313287?showtitle=false\n",
-    "\n",
-    "Access the [YouTube video](https://youtu.be/9TCIOm8gcVQ?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO) for this lesson."
+    "<ImageLink\n",
+    "  title=\"Quantum Error Correction | Understanding Quantum Information & Computation | Lesson 15\"\n",
+    "  alt=\"Video thumbnail\"\n",
+    "  href=\"https://youtu.be/9TCIOm8gcVQ?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO\"\n",
+    "  src=\"/learning/images/courses/foundations-of-quantum-error-correction/quantum-code-constructions/introduction/youtube-thumbnail.avif\"\n",
+    "/>"
    ]
   }
  ],
