--- a/learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/controlling-error-propagation.ipynb
+++ b/learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/controlling-error-propagation.ipynb
@@ -267,7 +267,7 @@
     "$$\n",
     "\n",
     "where $0^n$ and $1^n$ refer to the all-zero and all-one strings of length $n.$\n",
-    "For instance, this is a $\\vert\\phi^+\\rangle$ state when $n=2$ and a GHZ state when $n=3,$ but in general Shor error correction requires a state like this for $n$ being the weight of the stabilizer generator being measured.\n",
+    "For instance, this is a $\\vert\\phi^+\\rangle$ state when $n=2$ and a GHZ state when $n=3,$ but in general, Shor error correction requires a state like this for $n$ being the weight of the stabilizer generator being measured.\n",
     "\n",
     "As an example, the circuit shown here measures a stabilizer generator of the form $P_2\\otimes P_1 \\otimes P_0.$\n",
     "\n",
